<resources>
    <string name="app_name">TaskOne</string>
    <string name="add_player">Add player</string>
    <string name="name">Name:</string>
    <string name="surname">Surname:</string>
    <string name="membership_price">Membership price:</string>
    <string name="local_rank">Local rank:</string>
    <string name="add">Add</string>
    <string name="exit">Exit</string>
    <string name="scan_qr_code">Scan QR code</string>
    <string name="info">Info</string>
    <string name="recently_added_player"><b>Recently added player:</b></string>
    <string name="zntk_club_manager"><b>ZNTK club manager</b></string>
    <string name="application_for_managing_and_keeping_evidence_of_players_and_their_memberships">Application for managing and keeping evidence of players and their memberships</string>
    <string name="version_1_4_0"><b>Version 1.4.0</b></string>
    <string name="app_author"><i>Author: Anej Bradač Vranc</i></string>
    <string name="player_added_succ">Player added successfully</string>
    <string name="player_edited_succ">Player edited successfully</string>
    <string name="incorrect_qr">Incorrect QR code!</string>
    <string name="empty_val_logcat_error">Value cannot be empty!</string>
    <string name="membership_price_plchldr">Membership price: %s</string>
    <string name="name_surname_plchldr">Name and surname: %s</string>
    <string name="local_ranking_plchldr">Local ranking: %s</string>
    <string name="app_id_plchldr" translatable="false">%s</string>
    <string name="test">Test</string>
    <string name="english_en">English-en</string>
    <string name="german_de">German-de</string>
    <string name="slovene_sl">Slovene-sl</string>
    <string name="settings">Settings</string>
    <string name="edit">Edit</string>
    <string name="edit_player">Edit player</string>
    <string name="enable_qr_code_scan">Enable QR code scan</string>
    <string name="ntk_maribor">ŽNTK Maribor</string>
    <string-array name="languages_array">
        <item>@string/english_en</item>
        <item>@string/german_de</item>
        <item>@string/slovene_sl</item>
    </string-array>
</resources>