<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".AddPlayerActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.45" />


    <TextView
        android:id="@+id/formtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/add_player"
        android:fontFamily="@font/montserratsemibold"
        android:textColor="@color/white"
        android:textSize="@dimen/xxl_font_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name_tw"
        android:layout_marginEnd="16dp"
        android:labelFor="@id/name_input"
        android:text="@string/name"
        style="@style/InputLabelText"
        app:layout_constraintBaseline_toBaselineOf="@+id/name_input"
        app:layout_constraintEnd_toStartOf="@+id/guideline" />

    <TextView
        android:id="@+id/surname_tw"
        android:layout_marginEnd="16dp"
        android:labelFor="@id/surname_input"
        android:text="@string/surname"
        style="@style/InputLabelText"
        app:layout_constraintBaseline_toBaselineOf="@+id/surname_input"
        app:layout_constraintEnd_toStartOf="@+id/guideline" />

    <TextView
        android:id="@+id/membership_tw"
        android:layout_marginEnd="16dp"
        android:labelFor="@id/memPrice_input"
        android:text="@string/membership_price"
        style="@style/InputLabelText"
        app:layout_constraintBaseline_toBaselineOf="@+id/memPrice_input"
        app:layout_constraintEnd_toStartOf="@+id/guideline" />

    <TextView
        android:id="@+id/rank_tw"
        android:layout_marginEnd="16dp"
        android:labelFor="@id/rank_input"
        android:text="@string/local_rank"
        style="@style/InputLabelText"
        app:layout_constraintBaseline_toBaselineOf="@+id/rank_input"
        app:layout_constraintEnd_toStartOf="@+id/guideline" />

    <EditText
        android:id="@+id/name_input"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:inputType="text"
        style="@style/InputField"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <EditText

        android:id="@+id/surname_input"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:inputType="text"
        style="@style/InputField"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/name_input" />

    <EditText
        android:id="@+id/memPrice_input"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:inputType="number"
        style="@style/InputField"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/surname_input" />

    <EditText
        android:id="@+id/rank_input"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:inputType="number"
        style="@style/InputField"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/memPrice_input" />

    <Button
        android:id="@+id/addPlayer_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/milky_white"
        android:text="@string/add"
        android:fontFamily="@font/montserratregular"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/exit_button"
        android:contentDescription="@string/exit"
        style="@style/NavigationExitButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_exit_icon" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.09" />

    <ImageButton
        android:id="@+id/qrScan_button"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="32dp"
        style="@style/NavigationButton"
        android:contentDescription="@string/scan_qr_code"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/info_qr" />

</androidx.constraintlayout.widget.ConstraintLayout>