<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/zntk_logo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/add_player_btn"
        android:layout_marginEnd="@dimen/nav_button_margin"
        android:layout_marginBottom="@dimen/nav_button_margin"
        android:contentDescription="@string/add_player"
        style="@style/NavigationButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/main_person_add_big" />

    <ImageButton
        android:id="@+id/exit_button_main"
        android:contentDescription="@string/exit"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/NavigationExitButton"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_exit_icon" />

    <ImageButton
        android:id="@+id/info_button_main"
        android:layout_marginStart="@dimen/nav_button_margin"
        android:layout_marginBottom="@dimen/nav_button_margin"
        android:contentDescription="@string/info"
        style="@style/NavigationButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/info_icon" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_main2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.84" />

    <ImageButton
        android:id="@+id/settings_button"
        android:contentDescription="@string/settings"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/nav_button_margin"
        style="@style/SettingsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_settings_24" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="350dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_main2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_main"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_marginBottom="16dp"
        style="@style/MainTitle"
        android:text="@string/ntk_maribor"
        app:layout_constraintBottom_toTopOf="@+id/guideline_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>