<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".InfoActivity">

    <ImageButton
        android:id="@+id/exit_info_button"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="@dimen/exit_button_margin"
        android:layout_marginTop="@dimen/exit_button_margin"
        android:backgroundTint="@color/transparent"
        android:contentDescription="@string/exit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_exit_icon" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:srcCompat="@drawable/info_icon_big" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15731874" />

    <TextView
        android:id="@+id/info_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/about_view_top_margin_main_title"
        android:fontFamily="@font/montserratsemibold"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:text="@string/zntk_club_manager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <TextView
        android:id="@+id/info_desc"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserratregular"
        android:layout_marginTop="@dimen/about_view_top_margin"
        android:textAlignment="center"
        android:text="@string/application_for_managing_and_keeping_evidence_of_players_and_their_memberships"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info_name" />

    <TextView
        android:id="@+id/info_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserratregular"
        android:layout_marginTop="@dimen/about_view_top_margin"
        android:textColor="@color/white"
        android:text="@string/version_1_4_0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info_desc" />

    <TextView
        android:id="@+id/info_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserratlight"
        android:layout_marginTop="@dimen/about_view_top_margin"
        android:textColor="@color/white"
        android:text="@string/app_author"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info_version" />

</androidx.constraintlayout.widget.ConstraintLayout>